# ConvexHull

./: .gitignore  CMakeLists.txt  GUI.py  README.md  conv-hull.c  vectorTest.c
src/: conv-hull.c  point-sort.c  vectorTest.c
src/Utils/: LinkedList.h  Point.h  Utils.c  Vector.c  Vector.h
src/utils/: LinkedList.c  Point.c  Utils.c  Utils.h  Vector.c  Vector.h
